[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Menus/LevelSelectionMenu/LevelNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menus/LevelSelectionMenu/LevelSelectionMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menus/LevelSelectionMenu/LevelNodeBound.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 122.643, 206.868, 0, 0, 0, 0, 427.371, 126.628 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 122.643, 206.868, 0, 0, 0, 0, 376.299, 376.698 )
}

[node name="LevelSelectionMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Levels" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="LevelNode" parent="Levels" instance=ExtResource( 1 )]
position = Vector2( 122.643, 206.868 )

[node name="LevelNode2" parent="Levels" instance=ExtResource( 1 )]
position = Vector2( 427.371, 126.628 )

[node name="LevelNode3" parent="Levels" instance=ExtResource( 1 )]
position = Vector2( 376.299, 376.698 )

[node name="Bounds" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="LevelNodeBound" parent="Bounds" instance=ExtResource( 3 )]
curve = SubResource( 1 )
origin_node_path = "Levels/LevelNode"
destination_node_path = "Levels/LevelNode2"

[node name="LevelNodeBound2" parent="Bounds" instance=ExtResource( 3 )]
curve = SubResource( 2 )
origin_node_path = "Levels/LevelNode"
destination_node_path = "Levels/LevelNode3"
